<?xml version="1.0" encoding="utf-8"?>


<!--19. Enclose the entire to-do item in a CardView.-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="@color/teaGreen"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="4dp">


    <RelativeLayout
        android:id="@+id/mainRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp">


        <RelativeLayout
            android:id="@+id/imageRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp">

            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"


                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                android:maxWidth="60dp"
                android:maxHeight="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_electronics" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/itemInfoRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/imageRL">


            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/itemNameSample"
                android:textColor="@color/black"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/itemName"


                android:text="@string/itemPriceSample"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbBought"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_above="@id/itemDesc"
                android:layout_below="@+id/itemName"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/itemPrice"
                android:shadowColor="@color/black"
                android:text="Bought"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/itemDesc"
                android:layout_width="150dp"
                android:layout_height="wrap_content"


                android:layout_below="@id/itemPrice"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"


                android:layout_marginTop="5dp"
                android:text="@string/itemDescSample"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btnsRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@id/btnDelete"

                android:text="@string/edit" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/delete" />

        </RelativeLayout>


    </RelativeLayout>





</androidx.cardview.widget.CardView>